--- a/Depth_estimation.ipynb
+++ b/Depth_estimation.ipynb
@@ -310,10 +310,10 @@
     "    import tensorflow as tf\n",
     "    return tf.image.resize(x, (224, 304))\n",
     "\n",
-    "# Correct: specify output_shape!\n",
+    "\n",
     "outputs = tf.keras.layers.Lambda(\n",
     "    resize_output,\n",
-    "    output_shape=(224, 304, 1)  # or appropriate shape for your output\n",
+    "    output_shape=(224, 304, 1)  \n",
     ")(outputs)\n"
    ]
   },
@@ -413,12 +413,12 @@
     "    arr = np.array(img).astype(np.float32) / 255.0\n",
     "    return arr\n",
     "\n",
-    "# Path to your image\n",
-    "image_path = 'images.jpeg'  # change this as needed!\n",
+    "\n",
+    "image_path = 'images.jpeg'  \n",
     "rgb = preprocess_image(image_path)\n",
     "input_img = np.expand_dims(rgb, axis=0)\n",
     "\n",
-    "# Predict depth map\n",
+    "\n",
     "pred_depth = model.predict(input_img)[0].squeeze()\n"
    ]
   },
